doc/Grammar.bnf
<letter> ::= [a-z] | [A-Z]
<digit> ::= [0-9]
<symbol> ::= "|" | " " | "!" | "#" | "$" | "%" | "&" | "(" | ")" | "*" | "+" | "," | "_" |
             "." | "/" | ":" | ";" | ">" | "=" | "<" | "?" | "@" | "[" | "\\" | "]" | "^" |
             "`" | "{" | "}" | "~"
<space> ::= " "
<whitespace> ::= <space> | "\t" | "\n" | "\r"

<name> ::= ( <letter> | "_" ) ( <letter> | <digit> | "-" | "_" )*

<str_literal> ::= "\"" ( " " | <letter> | <digit> | <symbol> | <whitespace> )* "\""

<int_literal> ::= ( "-" | "+" )? <digit>+

<float_literal> ::= <int_literal>? "." <digit>+

<literal> ::= <str_literal> | <int_literal> | <float_literal>

<type> ::= ("string" | "int" | "float" | "array" | "class" | "bool" | "callable" | "object")
		   ( "<" <digit> ".." <digit> ">" )?

<binary_op> ::= "+" | "-" | "*" | "/" | "%" | "&" | "|" | "^" |
				"||" | "&&" | "and" | "or" | "xor" | "<<" | ">>" |
                ">" | "<" | "<=" | ">="

<unary_op> ::= "!" | "~" | "-" | "+" | "--" | "++" | "**"

<import_stmt> ::= "import" <space>* <name> ("." <name>)* <space>* ";"

<expr> ::= " "

<var_decl> ::= "var" <name> <space>* <name> <space>* ":" <space>* <type>
			   ( <space>* "=" <space>* <expr> )? ";"
