src/parser/Parser.cpp
/*****************************************************************************
* File:
* Description:
* Author: Malcolm Hall
* Date:
* Version: 1
*
* MIT License
*
* Copyright (c) 2020 - 2023 Malcolm Hall
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
******************************************************************************/

#include "Parser.h"
#include <memory>
#include <utility>
#include "../builtins/RnBuiltins.h"
#include "../builtins/RnBuiltins_Array.h"
#include "../builtins/RnBuiltins_IO.h"
#include "../builtins/RnBuiltins_Math.h"
#include "../builtins/RnBuiltins_String.h"
#include "../builtins/RnBuiltins_System.h"
#include "../builtins/RnBuiltins_Type.h"
#include "../common/RnConfig.h"
#include "../common/RnInternment.h"
#include "../lexer/Lexer.h"
#include "../util/LoopCounter.h"
#include "../util/RnStack.h"
#include "../util/String.h"
#include "../util/log.h"
#include "ast/AliasDecl.h"
#include "ast/ArgDecl.h"
#include "ast/ArrayLiteral.h"
#include "ast/AssignmentStmt.h"
#include "ast/Ast.h"
#include "ast/AstNode.h"
#include "ast/BinaryExpr.h"
#include "ast/CatchBlock.h"
#include "ast/ClassDecl.h"
#include "ast/ConditionalStmt.h"
#include "ast/DeleteStmt.h"
#include "ast/ExitStmt.h"
#include "ast/Expr.h"
#include "ast/FlowControl.h"
#include "ast/FuncCall.h"
#include "ast/FuncDecl.h"
#include "ast/ImportStmt.h"
#include "ast/IndexedExpr.h"
#include "ast/LiteralValue.h"
#include "ast/Loop.h"
#include "ast/Name.h"
#include "ast/NodeType.h"
#include "ast/ReturnStmt.h"
#include "ast/ScopeNode.h"
#include "ast/TryBlock.h"
#include "ast/UnaryExpr.h"
#include "ast/VarDecl.h"

std::vector<std::string> Parser::parsed_files;

std::unordered_map<TokenType, int> Parser::_prec_tbl = {
    {TokenType::DBL_COLON, 300},  {TokenType::R_ARROW, 200},
    {TokenType::R_PARAN, 100},    {TokenType::DBL_STAR, 95},
    {TokenType::STAR, 90},        {TokenType::SLASH, 90},
    {TokenType::PERCENT, 90},     {TokenType::PLUS, 80},
    {TokenType::MINUS, 80},       {TokenType::DBL_R_CARAT, 70},
    {TokenType::DBL_L_CARAT, 70}, {TokenType::L_CARAT, 60},
    {TokenType::R_CARAT, 60},     {TokenType::LEQ, 60},
    {TokenType::GEQ, 60},         {TokenType::DBL_EQUAL, 50},
    {TokenType::NOT_EQUAL, 50},   {TokenType::AMPER, 40},
    {TokenType::TILDE, 40},       {TokenType::DBL_AMPER, 40},
    {TokenType::UP_ARROW, 30},    {TokenType::BAR, 20},
    {TokenType::DBL_BAR, 20},     {TokenType::L_PARAN, 0},
};

std::unordered_map<TokenType, Associativity> Parser::_associativity = {
    {TokenType::R_PARAN, NO_ASSOCIATIVITY},
    {TokenType::R_ARROW, LEFT},
    {TokenType::DBL_COLON, LEFT},
    {TokenType::STAR, LEFT},
    {TokenType::SLASH, LEFT},
    {TokenType::PERCENT, LEFT},
    {TokenType::PLUS, LEFT},
    {TokenType::MINUS, LEFT},
    {TokenType::DBL_R_CARAT, LEFT},
    {TokenType::DBL_L_CARAT, LEFT},
    {TokenType::L_CARAT, LEFT},
    {TokenType::R_CARAT, LEFT},
    {TokenType::GEQ, LEFT},
    {TokenType::LEQ, LEFT},
    {TokenType::DBL_EQUAL, LEFT},
    {TokenType::NOT_EQUAL, LEFT},
    {TokenType::AMPER, LEFT},
    {TokenType::DBL_AMPER, LEFT},
    {TokenType::UP_ARROW, LEFT},
    {TokenType::BAR, LEFT},
    {TokenType::DBL_BAR, LEFT},
    {TokenType::L_PARAN, NO_ASSOCIATIVITY},
};

/*****************************************************************************/
Parser::Parser() {
    FillBuffer(nullptr);
    ast = std::make_shared<Ast>();
    _current_scope = ast->root;
    _global_scope = ast->root;

#undef RN_BUILTIN_FUNC
#define RN_BUILTIN_FUNC(ns, name, retval, argcnt) \
    _current_scope->symbol_table->AddSymbol(      \
        #name, std::make_shared<RnTypeComposite>(retval));

    RN_BUILTIN_REGISTRATIONS

    _current_scope->pragma_table["bounds"] = "not-enforced";
    _current_scope->pragma_table["typing"] = "not-enforced";
}

/*****************************************************************************/
Parser::~Parser() = default;

/*****************************************************************************/
void Parser::ConditionalBufAdvance(TokenType t) {
    if (!EndOfSequence() && Current()->GetType() == t) {
        AdvanceBuffer(1);
    }
}

/*****************************************************************************/
AstNodePtr<ImportStmt> Parser::ParseImportStmt() {
    auto node = AstNode::CreateNode<ImportStmt>();
    AddCurrentFileInfo(node);
    Expect({TokenType::NAME, TokenType::STRING_LITERAL});
    AdvanceBuffer(1);
    node->source_file = Current()->GetLexeme();
    Expect(TokenType::SEMICOLON);
    AdvanceBuffer(1);

    // Parse the module and create a new subtree from it
    std::filesystem::path module_path;
    auto source_file = String::Replace(node->source_file, ".", "/") + ".rn";

    module_path = std::filesystem::path(node->file_info.GetFilePath()).parent_path() /
                  source_file;
    if (!std::filesystem::exists(module_path)) {
        module_path = std::filesystem::path(RnConfig::GetLibraryPath()) / source_file;
        if (!std::filesystem::exists(module_path)) {
            ThrowError("Could not open file " + module_path.string());
        }
    }

    // Check if the file has already been parsed
    if (std::find(parsed_files.begin(), parsed_files.end(), module_path) !=
        parsed_files.end()) {
        return node;
    } else {
        parsed_files.push_back(module_path);
    }

    if (std::filesystem::absolute(module_path) == std::filesystem::absolute(file)) {
        ThrowError("Circular dependency error: " + module_path.string());
    }

    Lexer lexer;
    lexer.LoadFile(module_path);
    lexer.ProcessTokens();
    Parser parser;
    parser.parsed_files = parsed_files;
    parser.working_dir = module_path.parent_path();
    parser.SetFromPtr(lexer.tokens.data(), lexer.tokens.size());
    parser.AdvanceBuffer(2);
    parser.Parse();
    node->ast = parser.ast;
    AdvanceBuffer(1);

    return node;
}

/*****************************************************************************/
AstNodePtr<VarDecl> Parser::ParseVarDecl() {
    auto node = AstNode::CreateNode<VarDecl>();
    AddCurrentFileInfo(node);
    Expect(TokenType::NAME);

    switch (Current()->GetType()) {
        case TokenType::CONST:
            node->is_const = true;
            break;
        case TokenType::GLOBAL:
            node->is_global = true;
            break;
        case TokenType::LOCAL:
            node->is_local = true;
            break;
        case TokenType::VAR:
            break;
        case TokenType::LITERAL:
            node->is_literal = true;
            break;
        default:
            assert(false);
    }

    AdvanceBuffer(1);
    AddCurrentFileInfo(node);
    node->id = ParseName(true)->value;
    Expect(TokenType::COLON);
    CheckExpected();
    AdvanceBuffer(1);
    node->type = ParseType();

    if (Current()->GetType() == TokenType::EQUAL) {
        AdvanceBuffer(1);
        node->init_value = ParseExpr();
    } else {
        ConditionalBufAdvance(TokenType::SEMICOLON);
    }

    if (node->is_literal) {
        if (!node->init_value || !node->init_value->IsLiteral())
            ThrowError(
                "A single, literal value must be assigned to a literal declaration.");
        else
            _current_scope->AddLiteral(node->id, node->init_value);
    }

    _current_scope->symbol_table->AddSymbol(node->id, node->type, node);
    return node;
}

/*****************************************************************************/
AstNodePtr<FuncDecl> Parser::ParseFuncDecl() {
    auto node = AstNode::CreateNode<FuncDecl>();
    AddCurrentFileInfo(node);
    ConditionalBufAdvance(TokenType::ROUTINE);

    if (Current()->GetType() == TokenType::R_PARAN) {
        node->is_closure = true;
    } else {
        node->id = ParseName(true)->value;
    }

    AdvanceBuffer(1);

    auto previousState = _current_state;
    _current_state = FUNC_DECL_CONTEXT;

    // Get the function arguments
    std::map<std::string, std::shared_ptr<RnTypeComposite>> arg_symbols;
    MAKE_LOOP_COUNTER(1000)
    while (Current()->GetType() != TokenType::L_PARAN) {
        INCR_LOOP_COUNTER
        auto arg = new ArgDecl();

        if (!Current()->IsType()) {
            Expect({TokenType::NAME, TokenType::VAR});
            CheckExpected();
            ConditionalBufAdvance(TokenType::VAR);
        }

        if (Current()->GetType() == TokenType::NAME) {
            arg->AddChild(ParseName());

            if (arg_symbols.find(arg->GetChild<Name>(0)->value) != arg_symbols.end()) {
                ThrowError("Redeclaration of argument '" +
                           arg->GetChild<Name>(0)->value + "' in routine '" + node->id +
                           "'");
            }
            AdvanceBuffer(1);  // Advance past the ':' separating the name from the type

            if (Current()->IsType() or
                _user_defined_type_map.find((Current()->GetLexeme())) !=
                    _user_defined_type_map.end()) {
                arg->SetType(ParseType());
            } else {
                ThrowError("Invalid type '" + Current()->GetLexeme() +
                           "' for parameter '" + arg->GetChild<Name>(0)->value +
                           "' while declaring routine '" + node->id + "'");
            }

        } else if (Current()->IsType()) {
            auto arg_name = AstNode::CreateNode<Name>();
            arg_name->value = "$" + std::to_string(arg_symbols.size() + 1);
            arg->AddChild(arg_name);
            arg->SetType(ParseType());
        }

        ConditionalBufAdvance(TokenType::COMMA);
        node->AddChild(arg);
        arg_symbols[arg->GetChild<Name>(0)->value] = arg->GetType();

        if (Current()->GetType() != TokenType::VAR && !Current()->IsType()) {
            ConditionalBufAdvance(TokenType::COMMA);
            break;
        }
    }

    ConditionalBufAdvance(TokenType::L_PARAN);

    // Get the function's return type
    if (Current()->GetType() == TokenType::COLON) {
        AdvanceBuffer(1);
        node->type = ParseType();

        if (node->type->GetType() != RnType::RN_OBJECT &&
            _current_state == CLASS_DECL_CONTEXT && node->id == "construct") {
            ThrowError("Class constructor must return object type");
        }
    } else {
        node->type = std::make_shared<RnTypeComposite>(RnType::RN_VOID);
    }

    // Get the function's scope
    auto previous_scope_count = _scope_count;
    node->SetChild(AstNode::SCOPE_CHILD_INDEX, ParseScope());
    assert(_scope_count == previous_scope_count);
    assert(node->GetChild(AstNode::SCOPE_CHILD_INDEX));

    for (const auto& symbol : arg_symbols) {
        node->GetChild<ScopeNode>(AstNode::SCOPE_CHILD_INDEX)
            ->symbol_table->AddSymbol(symbol.first, symbol.second, node);
    }

    if (_current_state == CLASS_DECL_CONTEXT) {
        node->GetChild<ScopeNode>(AstNode::SCOPE_CHILD_INDEX)
            ->symbol_table->AddSymbol(
                "this", std::make_shared<RnTypeComposite>(RnType::RN_OBJECT), node);
    }

    _current_scope->symbol_table->AddSymbol(
        node->id, std::make_shared<RnTypeComposite>(RnType::RN_CALLABLE), node);
    _current_state = previousState;
    return node;
}

/*****************************************************************************/
AstNodePtr<ClassDecl> Parser::ParseClassDecl() {
    auto node = AstNode::CreateNode<ClassDecl>();
    AddCurrentFileInfo(node);
    Expect(TokenType::NAME);
    AdvanceBuffer(1);

    node->id = ParseName(true)->value;
    _current_scope->symbol_table->AddSymbol(
        node->id, std::make_shared<RnTypeComposite>(RnType::RN_CALLABLE), node);
    _user_defined_type_map[node->id] =
        std::make_shared<RnTypeComposite>(RnType::RN_OBJECT);
    Expect({TokenType::EXTENDS, TokenType::BEGIN, TokenType::R_BRACE, TokenType::IS});
    CheckExpected();

    // Check for inherited classes and parse if necessary
    if (Current()->GetType() == TokenType::EXTENDS) {
        Expect(TokenType::NAME);
        AdvanceBuffer(1);

        MAKE_LOOP_COUNTER(DEFAULT_ITERATION_MAX)
        while (Current()->GetType() == TokenType::NAME) {
            INCR_LOOP_COUNTER
            node->parent_classes.emplace_back(ParseName());
            ConditionalBufAdvance(TokenType::COMMA);
        }
    }
    AdvanceBuffer(1);

    _previous_state = _current_state;
    _current_state = ParserState::CLASS_DECL_CONTEXT;
    auto previous_scope_count = _scope_count;
    node->SetChild(AstNode::SCOPE_CHILD_INDEX, ParseScope());
    assert(_scope_count == previous_scope_count);
    _current_state = _previous_state;

    if (!node->GetChild<ScopeNode>(AstNode::SCOPE_CHILD_INDEX)
             ->symbol_table->HasSymbolEntry("construct")) {
        ThrowError("No constructor found for class '" + node->id + "'");
    }
    return node;
}

/**
 * This function is responsible for parsing an expression component.
 * It returns a shared pointer to an AstNode object representing the parsed component.
 * If the component cannot be parsed, an error is thrown.
 *
 * @return AstNodePtr<AstNode> - The parsed expression component
 */
AstNodePtr<AstNode> Parser::GetExprComponent() {
    AstNodePtr<AstNode> node = nullptr;

    if ((Lookback() && Lookback()->IsOperator()) && Current()->IsUnaryOp()) {
        return ParseUnaryExpr();
    } else if (Current()->GetType() == TokenType::ROUTINE) {
        node = ParseFuncDecl();
    } else if (Current()->GetType() == TokenType::R_BRACK) {
        node = ParseArrayLiteral();
    } else if (Current()->GetType() == TokenType::NAME) {
        if (_current_scope->GetLiteral(Current()->GetLexeme())) {
            node = _current_scope->GetLiteral(Current()->GetLexeme());
            AdvanceBuffer(1);
        } else {
            node = ParseName();
            if (Current()->IsOneOf({TokenType::DBL_MINUS, TokenType::DBL_PLUS})) {
                node = ParseUnaryExpr(node);
            }
        }
    } else if (Current()->IsLiteral()) {
        AdvanceBuffer(1);
        node = AstNode::CreateNode<LiteralValue>();
        AddCurrentFileInfo(node);
        switch (Lookback()->GetType()) {
            case TokenType::INT_LITERAL: {
                node->node_type = AST_INT_LITERAL;
                AstNode::CastNode<LiteralValue>(node)->data =
                    static_cast<RnIntNative>(std::stol(Lookback()->GetLexeme()));
                _intern_count++;
                break;
            }
            case TokenType::FLOAT_LITERAL: {
                node->node_type = AST_FLOAT_LITERAL;
                AstNode::CastNode<LiteralValue>(node)->data =
                    static_cast<RnFloatNative>(std::stod(Lookback()->GetLexeme()));
                _intern_count++;
                break;
            }
            case TokenType::STRING_LITERAL: {
                node->node_type = AST_STRING_LITERAL;
                AstNode::CastNode<LiteralValue>(node)->data = Lookback()->GetLexeme();
                _intern_count++;
                break;
            }
            case TokenType::BOOL_LITERAL: {
                node->node_type = AST_BOOL_LITERAL;
                AstNode::CastNode<LiteralValue>(node)->data =
                    Lookback()->GetLexeme() == "true";
                _intern_count++;
                break;
            }
            case TokenType::NULL_LITERAL: {
                node->node_type = AST_NULL_LITERAL;
                break;
            }
            default:
                break;
        }
    }

    if (!node) {
        ThrowError("Failed to parse expression component");
    }
    return node;
}

/*****************************************************************************/
AstNodePtr<AstNode> Parser::ParseExpr(TokenType stop_token) {
    RnStack<Token*> op_stack;
    RnStack<AstNodePtr<AstNode>> result_stack;
    result_stack.Push(nullptr);

    auto make_binary_expr = [this, &result_stack, &op_stack]() mutable {
        auto node = AstNode::CreateNode<BinaryExpr>();
        node->SetChild(AstNode::RIGHT_CHILD_INDEX, result_stack.Pop());
        node->SetChild(AstNode::LEFT_CHILD_INDEX, result_stack.Pop());
        node->_op = op_stack.Pop()->GetLexeme();
        return node;
    };

    auto parse_bracketed_node = [this, &result_stack]() mutable {
        if (Lookback()->GetType() == TokenType::NAME ||
            Lookback()->GetType() == TokenType::L_PARAN) {
            result_stack.push_back(ParseIndexedExpr(result_stack.Pop()));
        } else {
            result_stack.Push(ParseArrayLiteral());
        }
    };

    if (Current()->IsUnaryOp()) {
        auto node = ParseUnaryExpr();
        result_stack.push_back(node);
    }

    bool break_next_iteration = false;
    MAKE_LOOP_COUNTER(DEFAULT_ITERATION_MAX)
    while (!result_stack.IsEmpty()) {
        INCR_LOOP_COUNTER
        if (Lookback() &&
            (Lookback()->IsOperator() ||
             unary_lookback_set.contains(Lookback()->GetType())) &&
            Current()->IsUnaryOp()) {
            if (Peek()->IsOneOf({TokenType::INT_LITERAL, TokenType::FLOAT_LITERAL})) {
                result_stack.push_back(GetExprComponent());
            } else {
                result_stack.Push(ParseUnaryExpr());
            }
        }

        if (!Current()) {
            ThrowError("Failed to parse expression");
        }

        if (Current()->GetType() == TokenType::R_BRACK) {
            parse_bracketed_node();
        }

        if (Current()->IsOneOf({TokenType::BEGIN, TokenType::R_BRACE,
                                TokenType::SEMICOLON, TokenType::L_BRACK}) ||
            (Current()->GetType() == TokenType::L_PARAN && op_stack.IsEmpty()) ||
            Current()->GetType() == stop_token || Current()->IsCompoundOp()) {
            // We should only get here at the end of an expression and at
            // the end of an expression we should always be here.
            ConditionalBufAdvance(stop_token);

            // Return the subtree
            if (result_stack.Size() == 1 ||
                (result_stack.Size() == 2 && op_stack.IsEmpty())) {
                return AddCurrentFileInfo(result_stack.Pop());
            } else {
                if (!op_stack.IsEmpty() &&
                    op_stack.back()->IsOneOf(
                        {TokenType::L_PARAN, TokenType::R_PARAN})) {
                    op_stack.Pop();
                }

                while (result_stack.Size() > 2 && !op_stack.IsEmpty()) {
                    if (op_stack.back()->GetType() == TokenType::R_PARAN) {
                        op_stack.Pop();
                    }

                    result_stack.Push(make_binary_expr());
                    if (!EndOfSequence()) {
                        if (Current()->GetType() == TokenType::R_BRACK) {
                            parse_bracketed_node();
                        } else if (Current()->GetType() == TokenType::R_PARAN) {
                            result_stack.Push(ParseFuncCall(result_stack.Pop()));
                        }
                    }
                }
                return AddCurrentFileInfo(result_stack.Pop());
            }
        } else {
            // Shunting-yard _prec_tbl parsing
            if (Current()->IsOperator() ||
                Current()->IsOneOf({TokenType::L_PARAN, TokenType::R_PARAN})) {
                if (Current()->GetType() == TokenType::R_PARAN) {
                    if (!Lookback()->IsOperator() && result_stack.Top() &&
                        Lookback()->GetType() != TokenType::R_PARAN) {
                        result_stack.Push(ParseFuncCall(result_stack.Pop()));
                    } else {
                        op_stack.push_back(Current());
                        AdvanceBuffer(1);
                    }
                } else if (op_stack.IsEmpty() ||
                           _prec_tbl[Current()->GetType()] >
                               _prec_tbl[op_stack.back()->GetType()]) {
                    // Push operator onto operator stack if it is higher _prec_tbl than Top of stack
                    op_stack.Push(Current());
                    AdvanceBuffer(1);
                } else if (_prec_tbl[Current()->GetType()] <=
                           _prec_tbl[op_stack.back()->GetType()]) {
                    // Create subtree from result stack if it is lower _prec_tbl than Top of operator stack
                    if (op_stack.back()->IsBinaryOp()) {
                        AstNodePtr<BinaryExpr> binaryExpr = make_binary_expr();
                        auto transformedExpr = TransformBinaryExpr(binaryExpr);
                        if (transformedExpr->node_type == AST_BINARY_EXPR) {
                            result_stack.Push(TransformBinaryExpr(
                                AstNode::CastNode<BinaryExpr>(transformedExpr)));
                        } else {
                            result_stack.push_back(transformedExpr);
                        }

                        // Handle left associativity
                        if (!op_stack.IsEmpty() and
                            _associativity[op_stack.back()->GetType()] == LEFT) {
                            result_stack.Push(make_binary_expr());
                        }
                    }

                    if (Current()->IsOperator()) {
                        op_stack.Push(Current());
                        AdvanceBuffer(1);
                    }
                }

                // If matching parantheses are found, Pop the operator stack and advance the buffer
                if (!op_stack.IsEmpty() &&
                    op_stack.back()->GetType() == TokenType::R_PARAN &&
                    Current()->GetType() == TokenType::L_PARAN) {
                    op_stack.Pop();
                    AdvanceBuffer(1);
                }
            } else if (Current()->GetType() == TokenType::R_BRACK) {
                result_stack.Push(ParseIndexedExpr(result_stack.Pop()));
            } else {
                result_stack.Push(GetExprComponent());
                if (Current()->GetType() == TokenType::R_BRACK) {
                    result_stack.Push(ParseIndexedExpr(result_stack.Pop()));
                }
            }
        }
        if (break_next_iteration || Lookback() == Current()) {
            break;
        } else {
            break_next_iteration = EndOfSequence();
        }
    }

    if (result_stack.Size() == 3) {
        return AddCurrentFileInfo(make_binary_expr());
    } else {
        if (!result_stack.IsEmpty()) {
            return AddCurrentFileInfo(result_stack.back());
        }
    }
    return AstNode::CreateNode<Expr>();
}

/*****************************************************************************/
AstNodePtr<UnaryExpr> Parser::ParseUnaryExpr(const AstNodePtr<AstNode>& expr) {
    auto node = AstNode::CreateNode<UnaryExpr>();
    AddCurrentFileInfo(node);
    node->op = Current()->GetLexeme();
    AdvanceBuffer(1);

    if (expr != nullptr) {
        node->SetChild(AstNode::PRIMARY_EXPR_INDEX, expr);
    } else if (Current()->IsUnaryOp()) {
        node->SetChild(AstNode::PRIMARY_EXPR_INDEX, ParseUnaryExpr());
    } else {
        if (Current()->GetType() == TokenType::R_PARAN) {
            node->SetChild(AstNode::PRIMARY_EXPR_INDEX, ParseExpr(TokenType::L_PARAN));
        } else {
            node->SetChild(AstNode::PRIMARY_EXPR_INDEX, GetExprComponent());
        }
    }

    return node;
}

/*****************************************************************************/
AstNodePtr<FlowControl> Parser::ParseFlowControlStmt() {
    auto node = AstNode::CreateNode<FlowControl>();
    AddCurrentFileInfo(node);
    Expect(TokenType::SEMICOLON);
    if (Current()->GetType() == TokenType::CONTINUE) {
        node->node_type = AST_CONTINUE_STMT;
    } else {
        node->node_type = AST_BREAK_STMT;
    }
    AdvanceBuffer(2);

    return node;
}

/*****************************************************************************/
AstNodePtr<ReturnStmt> Parser::ParseReturnStmt() {
    auto node = AstNode::CreateNode<ReturnStmt>();
    AddCurrentFileInfo(node);
    AdvanceBuffer(1);

    if (Current()->GetType() == TokenType::SEMICOLON) {
        AdvanceBuffer(1);
    } else {
        node->SetChild(AstNode::PRIMARY_EXPR_INDEX, ParseExpr());
    }

    return node;
}

/*****************************************************************************/
AstNodePtr<DeleteStmt> Parser::ParseDeleteStmt() {
    auto node = AstNode::CreateNode<DeleteStmt>();
    AddCurrentFileInfo(node);
    Expect(TokenType::NAME);
    AdvanceBuffer(1);

    if (Current()->GetType() == TokenType::SEMICOLON) {
        AdvanceBuffer(1);
    } else {
        node->SetName(ParseExpr());
    }

    return node;
}

/*****************************************************************************/
AstNodePtr<ExitStmt> Parser::ParseExitStmt() {
    auto node = AstNode::CreateNode<ExitStmt>();
    AddCurrentFileInfo(node);
    AdvanceBuffer(1);

    if (Current()->GetType() == TokenType::SEMICOLON) {
        AdvanceBuffer(1);
    } else {
        node->AddChild(ParseExpr());
    }

    return node;
}

/*****************************************************************************/
AstNodePtr<AstNode> Parser::ParseAssignmentStatement(const AstNodePtr<AstNode>& rexpr) {
    auto node = AstNode::CreateNode<AssignmentStmt>();
    AddCurrentFileInfo(node);
    node->SetChild(AstNode::LEFT_CHILD_INDEX, rexpr ? rexpr : ParseExpr());

    std::string op;
    if (Current()->IsCompoundOp()) {
        op = Current()->GetLexeme()[0];
        AdvanceBuffer(1);
    } else if (Lookback()->IsCompoundOp()) {
        op = Lookback()->GetLexeme()[0];
    }

    if (!op.empty()) {
        auto bin_expr = AstNode::CreateNode<BinaryExpr>();
        bin_expr->SetChild(AstNode::LEFT_CHILD_INDEX,
                           node->GetChild(AstNode::LEFT_CHILD_INDEX));
        bin_expr->_op = op;
        bin_expr->SetChild(AstNode::RIGHT_CHILD_INDEX, ParseExpr());
        auto final_rexpr = TransformBinaryExpr(bin_expr);
        if (bin_expr != final_rexpr && final_rexpr->node_type == AST_UNARY_EXPR) {
            return final_rexpr;
        } else {
            node->SetChild(AstNode::RIGHT_CHILD_INDEX, final_rexpr);
        }
    } else {
        ConditionalBufAdvance(TokenType::EQUAL);
        node->SetChild(AstNode::RIGHT_CHILD_INDEX, ParseExpr());
    }

    return node;
}

/*****************************************************************************/
AstNodePtr<ConditionalStmt> Parser::ParseConditionalStmt() {
    auto node = AstNode::CreateNode<ConditionalStmt>();
    AddCurrentFileInfo(node);

    if (Current()->IsOneOf({TokenType::IF, TokenType::ELIF})) {
        if (Current()->GetType() == TokenType::IF) {
            node->node_type = AST_IF_STMT;
        } else {
            node->node_type = AST_ELIF_STMT;
        }
        AdvanceBuffer(1);
        node->SetChild(AstNode::TEST_INDEX, ParseExpr(TokenType::COLON));
        node->SetChild(AstNode::CONSEQUENT_INDEX, ParseScope());

        // Keep parsing conditionals until no more are found
        AstNodePtr<ConditionalStmt> parent_node = node;
        while (Current() && Current()->IsOneOf({TokenType::ELIF, TokenType::ELSE})) {
            auto alternative = AstNode::CreateNode<ConditionalStmt>();
            parent_node->SetChild(AstNode::ALTERNATIVE_INDEX, alternative);
            AddCurrentFileInfo(alternative);

            if (Current()->GetType() == TokenType::ELIF) {
                alternative->node_type = AST_ELIF_STMT;
                AdvanceBuffer(1);
                alternative->SetChild(AstNode::TEST_INDEX, ParseExpr(TokenType::COLON));
                alternative->SetChild(AstNode::CONSEQUENT_INDEX, ParseScope());
            } else {
                alternative->node_type = AST_ELSE_STMT;
                Expect(TokenType::COLON);
                AdvanceBuffer(2);
                alternative->SetChild(AstNode::CONSEQUENT_INDEX, ParseScope());
            }

            parent_node = alternative;
        }
    } else {
        ThrowError("Invalid token '" + Current()->GetLexeme() +
                   "' for conditional statement.");
    }

    return node;
}

/*****************************************************************************/
AstNodePtr<ScopeNode> Parser::ParseScope() {
    auto node = AstNode::CreateNode<ScopeNode>();
    AddCurrentFileInfo(node);
    node->parent = _current_scope;
    node->symbol_table->SetParent(_current_scope->symbol_table);

    // Pragmas are carried downward until they are unset or out of scope
    for (const auto& entry : _current_scope->pragma_table) {
        node->pragma_table[entry.first] = entry.second;
    }

    ConditionalBufAdvance(TokenType::BEGIN);
    ConditionalBufAdvance(TokenType::R_BRACE);
    ConditionalBufAdvance(TokenType::COLON);

    auto previous_scope_count = _scope_count;
    ConvertScope(node);
    Parse();
    RevertScope();
    assert(_scope_count == previous_scope_count);

    if (!Current() && _data_idx > _data_size) {
        Log::WARN("Out of bounds parser index");
        return node;
    }

    if (Current()->IsOneOf({TokenType::END, TokenType::L_BRACE})) {
        AdvanceBuffer(1);
    }

    return node;
}

/*****************************************************************************/
AstNodePtr<FuncCall> Parser::ParseFuncCall(const AstNodePtr<AstNode>& expr) {
    auto node = AstNode::CreateNode<FuncCall>();
    AddCurrentFileInfo(node);

    if (expr == nullptr) {
        node->SetChild(AstNode::PRIMARY_EXPR_INDEX, ParseExpr());
    } else {
        node->SetChild(AstNode::PRIMARY_EXPR_INDEX, expr);
    }
    ConditionalBufAdvance(TokenType::R_PARAN);

    MAKE_LOOP_COUNTER(DEFAULT_ITERATION_MAX)
    while (!Current()->IsOneOf({TokenType::L_PARAN, TokenType::SEMICOLON})) {
        INCR_LOOP_COUNTER
        node->AddChild(ParseExpr(TokenType::COMMA));
    }
    AdvanceBuffer(1);

    return node;
}

/*****************************************************************************/
AstNodePtr<ArrayLiteral> Parser::ParseArrayLiteral() {
    auto node = AstNode::CreateNode<ArrayLiteral>();
    AddCurrentFileInfo(node);
    ConditionalBufAdvance(TokenType::R_BRACK);

    while (!Current()->IsOneOf({TokenType::L_BRACK, TokenType::SEMICOLON})) {
        node->AddChild(ParseExpr(TokenType::COMMA));
    }
    AdvanceBuffer(1);

    return node;
}

/*****************************************************************************/
AstNodePtr<Loop> Parser::ParseWhileLoop() {
    auto node = AstNode::CreateNode<Loop>();
    node->node_type = AST_WHILE_LOOP;
    AddCurrentFileInfo(node);
    ConditionalBufAdvance(TokenType::WHILE);
    node->test = ParseExpr(TokenType::COLON);
    auto previous_scope_count = _scope_count;
    node->SetChild(AstNode::SCOPE_CHILD_INDEX, ParseScope());
    assert(_scope_count == previous_scope_count);

    return node;
}

/*****************************************************************************/
AstNodePtr<Loop> Parser::ParseForLoop() {
    auto node = AstNode::CreateNode<Loop>();
    node->node_type = AST_FOR_LOOP;
    AddCurrentFileInfo(node);
    Expect(TokenType::R_PARAN);
    AdvanceBuffer(1);

    if (Peek()->GetType() == TokenType::VAR || Peek()->GetType() == TokenType::LOCAL) {
        AdvanceBuffer(1);
        node->init = ParseVarDecl();

    } else if (Peek()->GetType() == TokenType::NAME) {
        AdvanceBuffer(1);
